--- a/about.html
+++ b/about.html
@@ -16,14 +16,14 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
-            <p class="apresentacao__conteudo__texto">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
+            <p class="apresentacao__conteudo__texto">Nascido em uma ninhada de cinco cães, no mês de novembro do ano de 2015, em Minas do Leão, um município que está localizado a 90,4 KM da cidade de Porto Alegre, capital do estado do Rio Grande do Sul. Três meses após seu nascimento, mudou-se para a cidade de Canoas, região metropolitana de Porto Alegre. 
             </p>
-            <p class="apresentacao__conteudo__texto">t harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores ipsum delis forum birol parela maxime infena. Excepteur sint occaecat cupidatat non.</p>
+            <p class="apresentacao__conteudo__texto">Em Canoas, morando com um casal de humanos, desde cedo colocou em prática seu dom de levar amor e alegria ao ambiente. Ensinou aos dois humanos a arte de amar e de cuidar. Foi muito mimado. Dormia na cama com o casal, dormia no sofá, dormia no colchão de solteiro no chão, em cada cantinho da casa deixava sua marca registrada, muitos pelos, rsrsrs. Foram dois anos de muito amor, aprendizado e algumas broncas porque às vezes fazia coisas onde não devia, rsrsrsrs. Na comemoração do aniversário de 2 anos, o amor ficou ainda maior, pois chegou um presente especial para a vida toda: o maninho Nito. Essa amizade linda e inseparavél perdura nos dias atuais.</p>
         </section>
-        <img class="apresentacao__imagem" src="./assets/1490814223072.jpg" alt="Eu e Lui">
+        <img class="apresentacao__imagem" src="./assets/Lui e Nito.jpg" alt="Lui e Nito">
     </main>
     <footer class="rodape">
-        <p>Desenvolvido por Rodhrigo.</p>
+        <p>Desenvolvido por Rodhrigo 2023.</p>
     </footer>
 </body>
 </html>
