--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
-            <p class="apresentacao__conteudo__texto">Olá! Sou Rodrigo Lopes, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <h1 class="apresentacao__conteudo__titulo">Eleve sua vida neste planeta a outro nível <strong class="titulo-destaque">com um Pug de companhia!</strong></h1>
+            <p class="apresentacao__conteudo__texto">Olá! Sou o Pug Lui, acompanhante de seres humanos com especialidade em trazer amor e alegria aos meus humanos. Ajudo as pessoas a colocarem em prática boas horas de sono. Vamos conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
-                <a class="apresentacao__links__navegacao" href="https://github.com/guilhermeonrails">
+                <a class="apresentacao__links__navegacao" href="https://github.com/Rlopes2020">
                     <img src="./assets/github.png" alt="icone github">
                     GitHub
                 </a>
@@ -33,10 +33,10 @@
                 </a>
             </div>
         </section>
-        <img class="apresentacao__imagem" src="./assets/1490814223072.jpg" alt="Eu e Lui">
+        <img class="apresentacao__imagem" src="./assets/Lui.png" alt="Lui">
     </main>
     <footer class="rodape">
-        <p>Desenvolvido por Rodhrigo.</p>
+        <p>Desenvolvido por Rodhrigo 2023.</p>
     </footer>
 </body>
 </html>
