--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <img src="./assets/linkedin.png" alt="icone linkedin">
                     Linkedin
                 </a>
-                <a class="apresentacao__links__navegacao" href="https://www.instagram.com/rodhrigollopes/">
+                <a class="apresentacao__links__navegacao" href="https://www.instagram.com/ogirhdor/">
                     <img src="./assets/instagram.png" alt="icone instagram">
                     Instagram
                 </a>
