--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <img src="./assets/linkedin.png" alt="icone linkedin">
                     Linkedin
                 </a>
-                <a class="apresentacao__links__navegacao" href="https://www.instagram.com/ogirhdor/">
+                <a class="apresentacao__links__navegacao" href="https://www.instagram.com/rodhrigolopes/">
                     <img src="./assets/instagram.png" alt="icone instagram">
                     Instagram
                 </a>
